--- a/index.html
+++ b/index.html
@@ -16,9 +16,28 @@
     <h1>Welcome to</h1>
     <h1><span class="orange-color">Nasir Uddin</span> World!</h1>
     <h3>Build Climber and Train Stopper</h3>
-    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p></div>
-    <div class="half"><img src="jhankar.png" alt="img1"></div>
-</section>
+    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
     <a class="link-button" target="blank" href="https://www.google.com/">HIRE ME</a>
+</div>
+    <div class="half">
+        <img src="jhankar.png" alt="img1">
+    </div>
+</section>
+
+
+<section class="Dream-big">
+<div class="half">
+    <img src="jhankar2.png" alt="pic2">
+</div>
+
+<div class="half">
+    <h1>Dream Big </h1>
+    <h2>Become a web developer</h2>
+    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+    <a class="link-button" target="blank" href="https://www.google.com/">DOWNLOAD RESUME</a>
+</div>
+</section>
+    
+
 </body>
 </html>
