--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="top-bannar">
+<section class="top-bannar flex-containar">
     <div class="half">    
     <h1>Welcome to</h1>
     <h1><span class="orange-color">Nasir Uddin</span> World!</h1>
@@ -25,7 +25,7 @@
 </section>
 
 
-<section class="Dream-big">
+<section class="Dream-big flex-containar">
 <div class="half">
     <img src="jhankar2.png" alt="pic2">
 </div>
@@ -37,6 +37,27 @@
     <a class="link-button" target="blank" href="https://www.google.com/">DOWNLOAD RESUME</a>
 </div>
 </section>
+
+<section class="experience">
+    <h1> Experiences </h1>
+    <div class="flex-containar">
+        <div  id="grad1" class="experienc-item">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+    
+        <div  id="grad2" class="experienc-item">
+            <h2>Baby Web Developer</h2>
+            <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </div>
+</section>
+<footer>
+    <p> © Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
+
     
 
 </body>
